2007-11-02  Luca Bruno  <lethalman88@gmail.com>

	* examples/web/coldbrowser.st: embedding example of Syx into a CGI application

	* syx/syx-object.h (syx_string_new_unref): added

	* st/kernel/OrderedCollection.st: remove tally and implement relative indexes
	(removeAtIndex:): implemented
	(at:): reimplemented
	(at:put:): reimplemented

2007-11-01  Luca Bruno  <lethalman88@gmail.com>

	* st/kernel/Dictionary.st: fixed rehashing
	renamed incrementNumElements to incrementTally

	* examples/web: added

2007-08-29  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-object.h (SYX_BLOCK_CONTEXT_ENSURE_BLOCK): added instance variable

	* st/kernel/BlockClosure.st (ensure:): fixed block ensuring

	* syx/syx-interp.c (syx_interp_do_special): support block ensuring on self-return and stack-return

	* configure.ac: support build under MSYS

2007-08-28  Luca Bruno  <lethalman88@gmail.com>

	* Added support for GNU building system

2007-08-27  Luca Bruno  <lethalman88@gmail.com>

	* syx/SConscript: compile static objects before shared

	* SConstruct: install files contained in the share directory, call update-desktop-database and update-mime-database

	* st/kernel/ContextPart.st (showTraceback): renamed to tracebackString, show the real methodClass

	* syx/syx-object.h (SYX_OBJECT_IS_SYMBOL): added

	* syx/syx-init.c (syx_initialize_system): set syx_system_initialized to TRUE

	* syx/syx-error.c (syx_signal): if system is not initialized, call syx_error ()
	All calls have been updated

	* Renamed numElements variable to tally as designed by Smalltalk-80

	* st/kernel/Behavior.st (setInstanceVariableNames): fixed to scan the given string of variable names

	* st/kernel/YXTools.st: renamed to MVC.st

2007-08-26  Luca Bruno  <lethalman88@gmail.com>

	* st/kernel/Behavior.st (setInstanceVariableNames): added
	
	* st/kernel/Metaclass.st: fixed metaclass creation

	* st/kernel/Behavior.st: fixed class creation
	
	* st/kernel/Dictionary.st (at:ifAbsent:): added
